[tool.poetry]
name = "m4101c - image"
version = "0.1.0"
description = ""
authors = ["AlexisMoins <moinsalexis@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
matplotlib = "^3.5.1"
numpy = "^1.22.2"
jupyter = "^1.0.0"
scipy = "^1.8.0"
scikit-image = "^0.19.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
